--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -8,6 +8,8 @@
 name: CI - OpenWeatherMap
 
 on:
+  push:
+    branches: [ main ] 
   pull_request:
     branches: [ main ]  # Запускать workflow при пуше в ветку main
 
