--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,11 @@
 name: CI - OpenWeatherMap
 
 on:
+  push:
+    branches: [ main ]  # Запускать workflow при пуше в ветку main
   pull_request:
     branches: [ main ]  # Запускать workflow при пуше в ветку main
+  workflow_dispatch:  # Добавление поддержки ручного запуска
 
 jobs:
   run-tests:
