--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,6 @@ jobs:
       - name: Verify installed packages
         run: pip freeze
 
-      # Отслеживает, какой тест чаще всего не проходит
-      # - name: Run tests and generate JUnit report
-      #   run: |
-      #     pytest --junitxml=report.xml
-
       # Установка необходимых браузеров Playwright Chrome.
       - name: Install Playwright browsers
         run: |
@@ -80,17 +75,17 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Generate allure report
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        with:
-          allure_results: allure-results
-          allure_history: allure-history
-          allure_report: allure-report
-          gh_pages: gh-pages
-          ref: gh-pages
-          path: gh-pages
-          keep_reports: 30
+   #   - name: Generate allure report
+   #     uses: simple-elf/allure-report-action@master
+   #     if: always()
+   #     with:
+   #       allure_results: allure-results
+   #       allure_history: allure-history
+   #       allure_report: allure-report
+   #       gh_pages: gh-pages
+   #       ref: gh-pages
+   #       path: gh-pages
+   #       keep_reports: 30
 
       - name: Commit allure_report to Github Pages
         if: always()
