checked and fixed with Ruff and TC 01_09_02 and deleted wrong ci folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           python-version: "3.12"  # Установка нужной версии Python
 
+        # Установка xvfb
+      - name: Install xvfb
+        run: sudo apt-get install -y xvfb
+
         # Установка зависимостей из requirements.txt
       - name: Install dependencies
         run: |
