--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
 
+asyncio_mode=auto
+asyncio_default_fixture_loop_scope="function"
+
 # addopts = -s -vv -m "not slow" --alluredir=allure-results --video on --screenshot on
 
 addopts = -s -vv -m "not slow" --alluredir=allure-results --video on --screenshot on --headed --slowmo=3000
@@ -7,3 +10,4 @@ addopts = -s -vv -m "not slow" --alluredir=allure-results --video on --screensho
 
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
+
